--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -18,7 +18,7 @@
     "package:dist": "electron-builder --dir"
   },
   "keywords": [],
-  "author": "Diego Fernandes <diego.schell.f@gmail.com>",
+  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.0",
